<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="air.com.c2is.villedelyon.FormAlerte">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/grisbanniere"
            android:gravity="left">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/rouge"
                android:gravity="left">

                <include layout="@layout/header"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/bouton_gris"
                android:gravity="left">

                <TextView android:id="@+id/titre"
                    android:textColor="@color/blanc"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="15dp"
                    android:textSize="18sp"
                    android:textAllCaps="true"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/bouton_gris"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/bt_fermer"
                        android:layout_gravity="center_vertical"
                        android:background="@color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="15dp"
                        android:src="@drawable/bt_femer" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/myLayConfKo"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/grisbanniere"
                android:padding="10dp"
                android:visibility="gone"
                android:gravity="left">

                <TextView android:id="@+id/titreConfKo"
                    android:textColor="@color/noir"
                    android:text="@string/libFormAlerteTitreKo"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="15dp"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <TextView android:id="@+id/texteConfKo"
                    android:textColor="@color/noir"
                    android:text="@string/libFormAlerteTexteKo"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="18sp"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <ScrollView
                android:id="@+id/myScrollForm"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/grisbanniere"
                android:padding="10dp"
                android:gravity="left">



                <LinearLayout
                    android:id="@+id/layRadio"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:background="@color/grisbanniere"
                    android:padding="10dp"
                    android:gravity="center">

                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton android:id="@+id/radio_monsieur"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/libFormAlerteMonsieur"
                            android:checked="true"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton android:id="@+id/radio_madame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/libFormAlerteMadame"
                            android:onClick="onRadioButtonClicked"/>
                    </RadioGroup>


                </LinearLayout>


                <EditText
                        android:id="@+id/chpNom"
                        android:hint="@string/libFormAlerteNom"
                        android:inputType="text"
                        android:background="@color/gris"
                        android:textColor="@color/grisnoir"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_gravity="left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <EditText
                    android:hint="@string/libFormAlertePrenom"
                    android:id="@+id/chpPrenom"
                    android:onClick="onChampSelect"
                    android:inputType="text"
                    android:background="@color/gris"
                    android:textColor="@color/grisnoir"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:hint="@string/libFormAlerteEmail"
                    android:inputType="text"
                    android:id="@+id/chpEmail"
                    android:onClick="onChampSelect"
                    android:background="@color/gris"
                    android:textColor="@color/grisnoir"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:hint="@string/libFormAlerteTelephone"
                    android:inputType="text"
                    android:id="@+id/chpTelephone"
                    android:onClick="onChampSelect"
                    android:background="@color/gris"
                    android:textColor="@color/grisnoir"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <EditText
                    android:hint="@string/libFormAlerteMessage"
                    android:lines="6"
                    android:id="@+id/chpMessage"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:layout_gravity="top"
                    android:onClick="onChampSelect"
                    android:background="@color/gris"
                    android:textColor="@color/grisnoir"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:id="@+id/layImage"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:background="@color/grisbanniere"
                    android:padding="10dp"
                    android:gravity="center">

                        <ImageView
                            android:id="@+id/imgPreview"
                            android:background="@color/gris"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="20dp"/>

                        <Button
                            android:background="@drawable/bouton_valider"
                            android:text="@string/libFormAlerteBtPhoto1"
                            android:textColor="@color/blanc"
                            android:id="@+id/btPhoto1"
                            android:layout_width="0dp"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"/>
                        <Button
                            android:id="@+id/btPhoto2"
                            android:background="@drawable/bouton_valider"
                            android:text="@string/libFormAlerteBtPhoto2"
                            android:textSize="12sp"
                            android:textColor="@color/blanc"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/libLocalisation"
                    android:textColor="@color/noir"
                    android:text="@string/libFormAlerteLocalisation"
                    android:layout_gravity="left"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:textAllCaps="true"/>


                    <EditText
                        android:hint="@string/libFormAlerteNumero"
                        android:inputType="text"
                        android:id="@+id/chpNumero"
                        android:onClick="onChampSelect"
                        android:background="@color/gris"
                        android:textColor="@color/grisnoir"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_gravity="left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:hint="@string/libFormAlerteRue"
                        android:inputType="text"
                        android:onClick="onChampSelect"
                        android:id="@+id/chpRue"
                        android:background="@color/gris"
                        android:textColor="@color/grisnoir"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_gravity="left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/grisbanniere"
                    android:gravity="left">
                        <EditText
                            android:hint="@string/libFormAlerteCp"
                            android:focusable="true"
                            android:onClick="onChampSelect"
                            android:inputType="text"
                            android:background="@color/gris"
                            android:textColor="@color/grisnoir"
                            android:id="@+id/chpCp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_gravity="left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:hint="@string/libFormAlerteVille"
                            android:focusable="true"
                            android:inputType="text"
                            android:onClick="onChampSelect"
                            android:id="@+id/chpVille"
                            android:background="@color/gris"
                            android:textColor="@color/grisnoir"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:textColor="@color/noir"
                    android:text="@string/libFormAlerteObligatoire"
                    android:layout_gravity="center"
                    android:id="@+id/layObligatoire"
                    android:paddingLeft="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/btValiderChargement"
                    android:textColor="@color/noir"
                    android:text="@string/libFormAlerteChargement"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:textAllCaps="true"/>

                <Button
                    android:id="@+id/btValider"
                    android:layout_gravity="center"
                    android:background="@drawable/bouton_valider"
                    android:text="@string/libFormValider"
                    android:textColor="@color/blanc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            </ScrollView>

        </LinearLayout>
</RelativeLayout>
